# Study_with_anki

./: .gitignore  CMakeLists.txt  README.md  admindebugdialog.cpp  admindebugdialog.h  ankipackageimporter.cpp  ankipackageimporter.h  carddialog.cpp  carddialog.h  databasemanager.cpp  databasemanager.h  deepseekclient.cpp  deepseekclient.h  flashcard.h  main.cpp  mainwindow.cpp  mainwindow.h  reviewwidget.cpp  reviewwidget.h  task.cpp  task.h  taskdialog.cpp  taskdialog.h
packaging/: dstudy.desktop
resources/windows/: DStudy.rc
